--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "express-load": "^1.1.16",
     "express-session": "^1.15.6",
+    "method-override": "^2.3.10",
     "oracledb": "^2.1.2"
   }
 }
