--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-load": "^1.1.16",
     "express-session": "^1.15.6",
